fix: resource 도메인 테스트 수정 (린트)